--- a/Anchor.toml
+++ b/Anchor.toml
@@ -12,7 +12,7 @@ url = "https://api.apr.dev"
 
 [provider]
 cluster = "Localnet"
-wallet = "/Users//.config/solana/id.json"
+wallet = "/Users/andi-nugroho/.config/solana/id.json"
 
 [scripts]
 test = "yarn run ts-mocha -p ./tsconfig.json -t 1000000 tests/**/*.ts"
